// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertToOpenApi any-auth 1`] = `
"openapi: 3.0.1
info:
  title: fern
  version: ''
paths:
  /create:
    post:
      operationId: PostsService.createPost
      tags:
        - PostsService
      parameters: []
      responses:
        '200':
          description: ''
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/PostId'
      summary: Create Blog Post
      security:
        - BearerAuth: []
        - BasicAuth: []
        - MyHeaderAuth: []
      requestBody:
        required: true
        content:
          application/json:
            schema:
              $ref: '#/components/schemas/BlogPost'
  /{postId}:
    get:
      operationId: PostsService.getPost
      tags:
        - PostsService
      parameters:
        - name: postId
          in: path
          required: true
          schema:
            $ref: '#/components/schemas/PostId'
      responses:
        '200':
          description: ''
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/BlogPost'
components:
  schemas:
    PostId:
      type: string
    Author:
      type: object
      properties:
        name:
          type: string
      required:
        - name
    BlogPost:
      type: object
      properties:
        id:
          $ref: '#/components/schemas/PostId'
        title:
          type: string
        author:
          $ref: '#/components/schemas/Author'
        content:
          type: string
      required:
        - id
        - title
        - author
        - content
  securitySchemes:
    BearerAuth:
      type: http
      scheme: bearer
    BasicAuth:
      type: http
      scheme: basic
    MyHeaderAuth:
      type: apiKey
      in: header
      name: My-Header
servers: []
"
`;

exports[`convertToOpenApi test-api 1`] = `
"openapi: 3.0.1
info:
  title: fern
  version: ''
paths:
  /create:
    post:
      description: Creates a blog post and returns blog post id.
      operationId: PostsService.createPost
      tags:
        - PostsService
      parameters:
        - name: x-endpoint-header
          in: header
          description: I'm a header!
          required: true
          schema:
            type: string
          examples:
            Example1:
              value: abc
      responses:
        '200':
          description: ''
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/PostId'
              examples:
                Example1:
                  value: post-id-123
      requestBody:
        required: true
        content:
          application/json:
            schema:
              $ref: '#/components/schemas/CreatePostRequest'
            examples:
              Example1:
                value:
                  title: My Blog
                  author:
                    type: anonymous
                  content: I'm a post
                  postType: LONG
  /{postId}:
    get:
      description: Gets a blog post.
      operationId: PostsService.getPost
      tags:
        - PostsService
      parameters:
        - name: postId
          in: path
          required: true
          schema:
            $ref: '#/components/schemas/PostId'
          examples:
            Example1:
              value: post-id-123
        - name: some-query-param
          in: query
          required: true
          schema:
            type: integer
          examples:
            Example1:
              value: 123
      responses:
        '200':
          description: ''
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/BlogPost'
        '400':
          description: ''
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/PostNotFoundErrorBody'
              examples:
                Example1:
                  value:
                    id: post-id-123
    post:
      description: Updates a blog post.
      operationId: PostsService.updatePost
      tags:
        - PostsService
      parameters:
        - name: postId
          in: path
          required: true
          schema:
            $ref: '#/components/schemas/PostId'
      responses:
        '200':
          description: ''
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/PostId'
        '400':
          description: ''
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/PostNotFoundErrorBody'
      requestBody:
        required: true
        content:
          application/json:
            schema:
              $ref: '#/components/schemas/CreatePostRequest'
components:
  schemas:
    PostId:
      type: string
    BlogPost:
      type: object
      description: A blog post
      properties:
        id:
          $ref: '#/components/schemas/PostId'
        type:
          $ref: '#/components/schemas/PostType'
        title:
          type: string
        author:
          $ref: '#/components/schemas/Author'
        content:
          type: string
      required:
        - id
        - type
        - title
        - author
        - content
    PostType:
      type: string
      enum:
        - LONG
        - SHORT
    Author:
      oneOf:
        - type: object
          properties:
            type: {}
        - type: object
          properties:
            type:
              type: string
        - type: object
          allOf:
            - $ref: '#/components/schemas/PostType'
            - type: object
              properties:
                type:
                  type: string
                  enum:
                    - type
    PostNotFoundErrorBody:
      type: object
      properties:
        id:
          $ref: '#/components/schemas/PostId'
      required:
        - id
    CreatePostRequest:
      type: object
      properties:
        title:
          type: string
        author:
          $ref: '#/components/schemas/Author'
          description: Author is the writer.
        content:
          type: string
        postType:
          $ref: '#/components/schemas/PostType'
      required:
        - title
        - author
        - content
        - postType
  securitySchemes: {}
servers:
  - url: https://buildwithfern.com
  - url: https://dev.buildwithfern.com
"
`;
